[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chart-system"
version = "0.1.0"
description = "Polyformal navigation: four chart configurations that cross-reference the same problem space"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "SuperInstance"},
]
requires-python = ">=3.10"
keywords = ["polyformalism", "navigation", "charts", "multi-agent", "working-animal-architecture"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[project.urls]
Homepage = "https://github.com/SuperInstance/chart-system"
Repository = "https://github.com/SuperInstance/chart-system"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
